# flutter_wlroots

./: .gitignore  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
compositor_dart/: .metadata  pubspec.yaml
compositor_dart/lib/: compositor_dart.dart  constants.dart  surface.dart
compositor_dart/lib/keyboard/: keyboard_client_controller.dart  keyboard_controller.dart  platform_keyboard.dart
compositor_dart/lib/platform/: interceptor_binary_messenger.dart  interceptor_widgets_binding.dart
compositor_dart/lib/widgets/: compositor_surface_autosize.dart  compositor_surface_render.dart
compositor_dart/test/: compositor_dart_test.dart
demo/: pubspec.yaml
demo/lib/: constants.dart  main.dart  window.dart  window_clipper.dart  window_decoration.dart
demo/test/: widget_test.dart
example/: meson.build  simple.c  simple2.c
include/: asserts.h  constants.h  flutter_wlroots.h  gl_intercept_debug.h  gl_intercept_dummy.h  handle_map.h  input.h  instance.h  jsmn.h  key_mapping.h  meson.build  messages.h  output.h  platform_channel.h  plugin_registry.h  renderer.h  shaders.h  standard_message_codec.h  surface.h  task.h  wlroots_hacks.h
src/: flutter_wlroots.c  handle_map.cc  input.c  key_mapping.cc  meson.build  messages.c  output.c  platform_channel.c  plugin_registry.c  renderer.c  shaders.c  standard_message_codec.c  surface.c  task.c
src/plugins/: meson.build  text_input.c
subprojects/: seatd.wrap  wayland-protocols.wrap  wayland.wrap  wlroots.wrap
subprojects/flutter_embedder/: .gitignore  meson.build  meson_file_download.py  meson_file_extract.py  meson_options.txt
