executable(
    'simple',
    ['simple.c'],
    dependencies: [flutter_wlroots],
    include_directories: [fwr_inc],
    build_by_default: get_option('examples'),
)

executable(
    'simple2',
    ['simple2.c'],
    dependencies: [flutter_wlroots],
    include_directories: [fwr_inc],
    build_by_default: get_option('examples'),
)
