option('engine_commit', type: 'string', value: 'caaafc5604ee9172293eb84a381be6aadd660317', description: 'Commit of engine build to use')
option('engine_embedder_hash', type: 'string', value: 'e4406385e65883db8389e2e061af5bb465564974adc53aff43b1b2c159b91ec0', description: 'If present, sha256 hash to validate embedder build')
